Add cursed basic support for the tool attribute api

--- a/fabric-tool-attribute-api-v1/build.gradle
+++ b/fabric-tool-attribute-api-v1/build.gradle
@@ -9,5 +9,6 @@ dependencies {
 
 moduleDependencies(project, [
 		'fabric-api-base',
+		'fabric-mining-level-api-v1',
 		'fabric-tag-extensions-v0'
 ])
