--- a/build.gradle
+++ b/build.gradle
@@ -342,7 +342,7 @@ curseforge {
 
 	project {
 		id = "306612"
-		changelog = "A changelog can be found at https://github.com/FabricMC/fabric/commits"
+		changelog = ENV.CHANGELOG ?: "No changelog provided"
 		releaseType = Globals.preRelease ? "beta" : "release"
 		addGameVersion "1.16.5"
 		addGameVersion "Fabric"
@@ -375,7 +375,7 @@ task github(dependsOn: remapMavenJar) {
 
 		def releaseBuilder = new GHReleaseBuilder(repository, version as String)
 		releaseBuilder.name("[$Globals.mcVersion] Fabric API $Globals.baseVersion")
-		releaseBuilder.body("A changelog can be found at https://github.com/FabricMC/fabric/commits")
+		releaseBuilder.body(ENV.CHANGELOG ?: "No changelog provided")
 		releaseBuilder.commitish(getBranch())
 		releaseBuilder.prerelease(Globals.preRelease)
 
@@ -394,6 +394,7 @@ task modrinth(type: com.modrinth.minotaur.TaskModrinthUpload, dependsOn: remapMa
 	versionNumber = version
 	versionName = "[$Globals.mcVersion] Fabric API $Globals.baseVersion"
 	releaseType = Globals.preRelease ? "beta" : "release"
+	changelog = ENV.CHANGELOG ?: "No changelog provided"
 
 	uploadFile = file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")
 
