--- a/fabric-resource-loader-v0/build.gradle
+++ b/fabric-resource-loader-v0/build.gradle
@@ -1,5 +1,5 @@
-archivesBaseName = "fabric-resource-loader-v0"
-version = getSubprojectVersion(project, "0.4.7")
+\archivesBaseName = "fabric-resource-loader-v0"
+version = getSubprojectVersion(project, "0.4.8")
 
 dependencies {
 	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
