--- a/fabric-resource-loader-v0/build.gradle
+++ b/fabric-resource-loader-v0/build.gradle
@@ -1,4 +1,4 @@
-\archivesBaseName = "fabric-resource-loader-v0"
+archivesBaseName = "fabric-resource-loader-v0"
 version = getSubprojectVersion(project, "0.4.8")
 
 dependencies {
