--- a/fabric-tag-extensions-v0/build.gradle
+++ b/fabric-tag-extensions-v0/build.gradle
@@ -3,11 +3,11 @@ version = getSubprojectVersion(project, "1.1.4")
 
 moduleDependencies(project, [
 		'fabric-api-base',
-		'fabric-resource-loader-v0'
+		'fabric-resource-loader-v0',
+		'fabric-lifecycle-events-v1'
 ])
 
 dependencies {
 	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
-	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 	testmodImplementation project(path: ':fabric-key-binding-api-v1', configuration: 'dev')
 }
