Load dynamic registry tags right after datapack entries loaded

--- a/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
+++ b/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
@@ -6,6 +6,7 @@
     "DynamicRegistryManagerAccess",
     "MixinMinecraftServer",
     "MixinObjectBuilder",
+    "MixinRegistryOps",
     "MixinRequiredTagListRegistry",
     "MixinTagBuilder",
     "MixinTagImpl",
