--- a/fabric-entity-events-v1/build.gradle
+++ b/fabric-entity-events-v1/build.gradle
@@ -1,5 +1,5 @@
 archivesBaseName = "fabric-entity-events-v1"
-version = getSubprojectVersion(project, "1.1.0")
+version = getSubprojectVersion(project, "1.2.0")
 
 moduleDependencies(project, [
 		'fabric-api-base'
@@ -7,4 +7,6 @@ moduleDependencies(project, [
 
 dependencies {
 	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-networking-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-registry-sync-v0', configuration: 'dev')
 }
