Tag Factory API (#1562)
* Tag factory

* Add static biome tag factory to the API

* Use SERVER_STARTING event

* Use the ctor directly

* Use the default BIOME factory

* AccessorDynamicRegistryManager -> DynamicRegistryManagerAccess

* Return Tag.Identified

* Load dynamic registry tags right after datapack entries loaded

* DynamicRegistryManagerAccess -> DynamicRegistryManagerAccessor

* Fix grammar

--- a/fabric-tag-extensions-v0/build.gradle
+++ b/fabric-tag-extensions-v0/build.gradle
@@ -5,3 +5,9 @@ moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-resource-loader-v0'
 ])
+
+dependencies {
+	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-key-binding-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+}
