--- a/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
+++ b/fabric-tag-extensions-v0/src/main/resources/fabric-tag-extensions-v0.mixins.json
@@ -3,10 +3,15 @@
   "package": "net.fabricmc.fabric.mixin.tag.extension",
   "compatibilityLevel": "JAVA_16",
   "mixins": [
-    "AccessorFluidTags",
+    "DynamicRegistryManagerAccessor",
+    "MixinMinecraftServer",
     "MixinObjectBuilder",
+    "MixinRegistryOps",
+    "MixinRequiredTagListRegistry",
+    "MixinTagBuilder",
     "MixinTagImpl",
-    "MixinTagBuilder"
+    "MixinTagManager",
+    "MixinTagManagerLoader"
   ],
   "injectors": {
     "defaultRequire": 1
