--- a/fabric-transfer-api-v1/build.gradle
+++ b/fabric-transfer-api-v1/build.gradle
@@ -1,5 +1,5 @@
 archivesBaseName = "fabric-transfer-api-v1"
-version = getSubprojectVersion(project, "1.1.0-pre.09")
+version = getSubprojectVersion(project, "1.1.0")
 
 moduleDependencies(project, [
 	'fabric-api-base',
