--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 	id "eclipse"
 	id "idea"
 	id "maven-publish"
-	id "fabric-loom" version "0.8.12" apply false
+	id "fabric-loom" version "0.9.+" apply false
 	id "org.cadixdev.licenser" version "0.5.0"
 	id "org.ajoberstar.grgit" version "3.1.0"
 	id "com.matthewprenger.cursegradle" version "1.4.0"
@@ -19,7 +19,7 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.38.0"
+	static def baseVersion = "0.38.1"
 	static def mcVersion = "1.17.1"
 	static def yarnVersion = "+build.1"
 	static def loaderVersion = "0.11.3"
