--- a/fabric-renderer-registries-v1/build.gradle
+++ b/fabric-renderer-registries-v1/build.gradle
@@ -1,10 +1,7 @@
 archivesBaseName = "fabric-renderer-registries-v1"
 version = getSubprojectVersion(project, "3.2.0")
 
-dependencies {
-	testmodImplementation project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
-}
-
 moduleDependencies(project, [
-		'fabric-api-base'
+		'fabric-api-base',
+		'fabric-rendering-v1'
 ])
