--- a/fabric-biome-api-v1/build.gradle
+++ b/fabric-biome-api-v1/build.gradle
@@ -4,3 +4,9 @@ version = getSubprojectVersion(project, "3.1.12")
 minecraft {
     accessWidener = file("src/main/resources/fabric-biome-api-v1.accesswidener")
 }
+
+dependencies {
+	testmodImplementation project(path: ':fabric-api-base', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-tag-extensions-v0', configuration: 'dev')
+}
