Enable JUnit XML report generation.

--- a/fabric-gametest-api-v1/build.gradle
+++ b/fabric-gametest-api-v1/build.gradle
@@ -12,6 +12,7 @@ loom {
 			server()
 			name "Game Test"
 			vmArg "-Dfabric-api.gametest"
+			vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
 			runDir "build/gametest"
 
 			// Specific to fabric api
