--- a/fabric-game-rule-api-v1/build.gradle
+++ b/fabric-game-rule-api-v1/build.gradle
@@ -1,8 +1,8 @@
 archivesBaseName = "fabric-game-rule-api-v1"
 version = getSubprojectVersion(project, "1.0.7")
 
-minecraft {
-	accessWidener = file("src/main/resources/fabric-game-rule-api-v1.accesswidener")
+loom {
+	accessWidenerPath = file("src/main/resources/fabric-game-rule-api-v1.accesswidener")
 }
 
 dependencies {
