--- a/fabric-rendering-fluids-v1/build.gradle
+++ b/fabric-rendering-fluids-v1/build.gradle
@@ -2,5 +2,10 @@ archivesBaseName = "fabric-rendering-fluids-v1"
 version = getSubprojectVersion(project, "0.1.13")
 
 moduleDependencies(project, [
-		'fabric-api-base'
+		'fabric-api-base',
+		'fabric-textures-v0'
 ])
+
+dependencies {
+	testmodImplementation project(path: ':fabric-textures-v0', configuration: 'dev')
+}
