--- a/fabric-object-builder-api-v1/build.gradle
+++ b/fabric-object-builder-api-v1/build.gradle
@@ -2,7 +2,7 @@ archivesBaseName = "fabric-object-builder-api-v1"
 version = getSubprojectVersion(project, "1.9.5")
 
 dependencies {
-	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodImplementation project(path: ':fabric-command-api-v1', configuration: 'dev')
 }
 
 moduleDependencies(project, [
@@ -12,6 +12,6 @@ moduleDependencies(project, [
 		'fabric-tool-attribute-api-v1'
 ])
 
-minecraft {
-	accessWidener = file("src/main/resources/fabric-object-builder-api-v1.accesswidener")
+loom {
+	accessWidenerPath = file("src/main/resources/fabric-object-builder-api-v1.accesswidener")
 }
