--- a/fabric-content-registries-v0/build.gradle
+++ b/fabric-content-registries-v0/build.gradle
@@ -2,7 +2,7 @@ archivesBaseName = "fabric-content-registries-v0"
 version = getSubprojectVersion(project, "0.2.4")
 
 loom {
-	accessWidener = file("src/main/resources/fabric-content-registries-v0.accesswidener")
+	accessWidenerPath = file("src/main/resources/fabric-content-registries-v0.accesswidener")
 }
 
 moduleDependencies(project, [
