--- a/settings.gradle
+++ b/settings.gradle
@@ -14,7 +14,7 @@ rootProject.name = "fabric-api"
 include 'fabric-api-base'
 
 include 'fabric-api-lookup-api-v1'
-include 'fabric-biome-api-v1'
+//include 'fabric-biome-api-v1'
 include 'fabric-blockrenderlayer-v1'
 include 'fabric-commands-v0'
 include 'fabric-command-api-v1'
@@ -37,7 +37,6 @@ include 'fabric-mining-levels-v0'
 include 'fabric-models-v0'
 include 'fabric-networking-v0'
 include 'fabric-networking-api-v1'
-include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builder-api-v1'
 include 'fabric-object-builders-v0'
 include 'fabric-particles-v1'
