Restore Biome API as far as possible. Removed Overworld Biome additions for now until a new API can be worked out while the Vanilla changes stabilize.

--- a/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
+++ b/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
@@ -12,17 +12,8 @@
     "modification.RegistryOpsMixin",
     "modification.SpawnDensityAccessor",
     "modification.SpawnSettingsAccessor",
-    "AddHillsLayerAccessor",
-    "BuiltinBiomesAccessor",
-    "BuiltinBiomesAccessor",
-    "MixinAddEdgeBiomesLayer",
-    "MixinAddHillsLayer",
-    "MixinAddRiversLayer",
     "MixinMultiNoiseBiomeSource",
-    "MixinSetBaseBiomesLayer",
-    "MixinTheEndBiomeSource",
-    "MultiNoiseBiomeSourceAccessor",
-    "VanillaLayeredBiomeSourceAccessor"
+    "MixinTheEndBiomeSource"
   ],
   "injectors": {
     "defaultRequire": 1
